# uap_tasks_assigner

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: UAPTasksAssignerConfig.cmake.in
include/uap_ta/: tasks_assigner.hpp
test/: test_tasks_assigner.cpp
